# wd40

./: .gitignore  .impeccable.md  CLAUDE.md  DESIGN.md  Dockerfile  Justfile  README.md  build.zig  build.zig.zon  claude.md  dockerfile  index.html  manifest  package-lock.json  package.json  pnpm-lock.yaml  readme.md  wd40.ascii
.beads/: metadata.json
.claude/: settings.json
.claude/worktrees/goofy-ride/: README.md
.claude/worktrees/goofy-ride/.claude/: launch.json
.claude/worktrees/goofy-ride/.playwright-mcp/: page-2026-04-03T03-00-26-881Z.yml  (+1 more)
.github/workflows/: ci.yml  release-macos-pkg.yml
.omx/: metrics.json
.omx/state/: hud-state.json  notify-hook-state.json  skill-active-state.json  tmux-hook-state.json
.playwright-mcp/: page-2026-04-03T02-56-07-942Z.yml  page-2026-04-03T03-01-14-667Z.yml
plans/: PROMPT.md  bead.template.md  engineering.md  graceful-forging-origami.md  lou-lmist-kyoto-design-20260404-002601.md  not-yet-considered.md  wd40.md
src/: editor-styles.test.ts  editor-styles.ts  fonts.ts  heading-markers.test.ts  heading-markers.ts  level-hud.ts  main.ts  main.zig  map-history.test.ts  map-history.ts  markdown-heading-input.test.ts  markdown-heading-input.ts  outliner.ts  styles.css  theme.ts  themes.test.ts  themes.ts  transform.test.ts  transform.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tmp/: backlog-todos.md  layer-1-typography-spacing.md  layer-2-animations.md  layer-3-mindmap-themes.md  layer-4-chrome-details.md
(+5 files in other folders)
