[package]
name = "markmap-desktop"
version = "0.1.0"
description = "Markmap - Markdown Mindmap Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "markmap_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = "0.12"
